增加：修复剩余翻译

--- a/Shared/en.lproj/Localizable.strings
+++ b/Shared/en.lproj/Localizable.strings
@@ -25,6 +25,7 @@
 
 "EDITTASK.TITLE" = "Title";
 "EDITTASK.CONTENT" = "Content";
+"EDITTASK.DURATION" = "Duration is";
 "EDITTASK.CANCEL" = "DON'T SAVE";
 
 "TASK.STATUS.ORIGINAL" = "😶";
@@ -45,3 +46,23 @@
 "TEMPLATE.PROJECT.NAME" = "Project";
 "TEMPLATE.TASK.NAME" = "Task";
 "TEMPLATE.TASK.CONTENT" = "Content";
+
+"SETTINGS.NAVIGATIONTITLE" = "Settings";
+"SETTINGS.DOCSETTINGS" = "Document Settings";
+"SETTINGS.THEME" = "Theme";
+"SETTINGS.AUTHOR" = "Author";
+"SETTINGS.CREATEDATE" = "Create Date";
+"SETTINGS.DISPLAYMODE" = "Display Mode";
+"SETTINGS.DISPLAYMODE.ELEGANTLINES" = "Elegant Lines";
+"SETTINGS.DISPLAYMODE.FULL" = "Full Square";
+"SETTINGS.DISPLAYCAT" = "Category";
+"SETTINGS.DISPLAYCAT.ALL" = "All";
+"SETTINGS.DISPLAYCAT.TODOS" = "Todos";
+"SETTINGS.DOCVER" = "Document Ver";
+"SETTINGS.REMARK" = "Remark";
+"SETTINGS.SYSSETTINGS" = "System Settings";
+"SETTINGS.HIDEFINISHEDTASKS" = "Hide Finished Tasks";
+"SETTINGS.WATERFLOWLAYOUT" = "WaterFlow Layout";
+"SETTINGS.ABOUT" = "About";
+"SETTINGS.ABOUT.AUTHOR" = "Author";
+"SETTINGS.ABOUT.STUDIO" = "Studio";
