--- a/Shared/zh-Hans.lproj/Localizable.strings
+++ b/Shared/zh-Hans.lproj/Localizable.strings
@@ -25,6 +25,7 @@
 
 "EDITTASK.TITLE" = "标题";
 "EDITTASK.CONTENT" = "内容";
+"EDITTASK.DURATION" = "持续时间为";
 "EDITTASK.CANCEL" = "不保存";
 
 "TASK.STATUS.ORIGINAL" = "无😶";
@@ -45,3 +46,23 @@
 "TEMPLATE.PROJECT.NAME" = "项目";
 "TEMPLATE.TASK.NAME" = "任务";
 "TEMPLATE.TASK.CONTENT" = "任务内容";
+
+"SETTINGS.NAVIGATIONTITLE" = "设置";
+"SETTINGS.DOCSETTINGS" = "文档设置";
+"SETTINGS.THEME" = "主题";
+"SETTINGS.AUTHOR" = "作者";
+"SETTINGS.CREATEDATE" = "创建日期";
+"SETTINGS.DISPLAYMODE" = "显示模式";
+"SETTINGS.DISPLAYMODE.ELEGENTLINES" = "简约线条";
+"SETTINGS.DISPLAYMODE.FULL" = "完整模式";
+"SETTINGS.DISPLAYCAT" = "显示类别";
+"SETTINGS.DISPLAYCAT.ALL" = "所有任务";
+"SETTINGS.DISPLAYCAT.TODOS" = "待做任务";
+"SETTINGS.DOCVER" = "文档版本";
+"SETTINGS.REMARK" = "备注";
+"SETTINGS.SYSSETTINGS" = "系统设置";
+"SETTINGS.HIDEFINISHEDTASKS" = "隐藏已完成任务";
+"SETTINGS.WATERFLOWLAYOUT" = "瀑布流布局";
+"SETTINGS.ABOUT" = "关于";
+"SETTINGS.ABOUT.AUTHOR" = "作者";
+"SETTINGS.ABOUT.STUDIO" = "工作室";
