--- a/Shared/zh-Hant.lproj/Localizable.strings
+++ b/Shared/zh-Hant.lproj/Localizable.strings
@@ -25,6 +25,7 @@
 
 "EDITTASK.TITLE" = "標題";
 "EDITTASK.CONTENT" = "內容";
+"EDITTASK.DURATION" = "持續時間為";
 "EDITTASK.CANCEL" = "不保存";
 
 "TASK.STATUS.ORIGINAL" = "無😶";
@@ -45,3 +46,23 @@
 "TEMPLATE.PROJECT.NAME" = "項目";
 "TEMPLATE.TASK.NAME" = "任務";
 "TEMPLATE.TASK.CONTENT" = "任務內容";
+
+"SETTINGS.NAVIGATIONTITLE" = "設置";
+"SETTINGS.DOCSETTINGS" = "文檔設置";
+"SETTINGS.THEME" = "主題";
+"SETTINGS.AUTHOR" = "作者";
+"SETTINGS.CREATEDATE" = "創建日期";
+"SETTINGS.DISPLAYMODE" = "顯示模式";
+"SETTINGS.DISPLAYMODE.ELEGENTLINES" = "簡約線條";
+"SETTINGS.DISPLAYMODE.FULL" = "完整模式";
+"SETTINGS.DISPLAYCAT" = "顯示類別";
+"SETTINGS.DISPLAYCAT.ALL" = "所有任務";
+"SETTINGS.DISPLAYCAT.TODOS" = "待做任務";
+"SETTINGS.DOCVER" = "文檔版本";
+"SETTINGS.REMARK" = "備註";
+"SETTINGS.SYSSETTINGS" = "系統設置";
+"SETTINGS.HIDEFINISHEDTASKS" = "隱藏已完成任務";
+"SETTINGS.WATERFLOWLAYOUT" = "瀑布流佈局";
+"SETTINGS.ABOUT" = "關於";
+"SETTINGS.ABOUT.AUTHOR" = "作者";
+"SETTINGS.ABOUT.STUDIO" = "工作室";
