修正：中文翻译

--- a/Shared/zh-Hans.lproj/Localizable.strings
+++ b/Shared/zh-Hans.lproj/Localizable.strings
@@ -53,7 +53,7 @@
 "SETTINGS.AUTHOR" = "作者";
 "SETTINGS.CREATEDATE" = "创建日期";
 "SETTINGS.DISPLAYMODE" = "显示模式";
-"SETTINGS.DISPLAYMODE.ELEGENTLINES" = "简约线条";
+"SETTINGS.DISPLAYMODE.ELEGANTLINES" = "简约线条";
 "SETTINGS.DISPLAYMODE.FULL" = "完整模式";
 "SETTINGS.DISPLAYCAT" = "显示类别";
 "SETTINGS.DISPLAYCAT.ALL" = "所有任务";
